# Protheus-Control-Center

./: .gitignore  Dockerfile  README.md  app.py  arquivos_adicionais_web.py  atualizar_rpo_web.py  configurador_appserver.py  funcoes_web.py  historical_rpo.py  inicializador_protheus_web.py  instalador_protheus_web.py  log.py  opcoes_adicionais_web.py  paths.json  pyproject.toml  requirements.txt
AppServer_ini_2210/: appserver.ini
AppServer_ini_2310/: appserver.ini
AppServer_ini_2410/: appserver.ini
docs/: CONFIGURACOES_DIRETORIOS.md  inicializador_protheus.md  instalador_protheus.md
