[tool.poetry]
name = "protheuscontrolcenter"
version = "0.1.0"
description = "Uma ferramenta web para gerenciar a instalação e inicialização de componentes do Protheus."
authors = ["GustavoDuranBR <gustavoduran22@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
altair = "^5.4.1"
altgraph = "^0.17.4"
annotated-types = "^0.7.0"
anyio = "^4.6.2.post1"
arrow = "^1.3.0"
attrs = "^24.2.0"
binaryornot = "^0.4.4"
beautifulsoup4 = "^4.12.3"
blinker = "^1.8.2"
cachetools = "^5.5.0"
certifi = "^2024.8.30"
chardet = "^5.2.0"
charset-normalizer = "^3.4.0"
click = "^8.1.7"
colorama = "^0.4.6"
cookiecutter = "^2.6.0"
fastapi = "^0.115.4"
flet = "^0.24.1"
flet-core = "^0.24.1"
flet-runtime = "^0.24.1"
gitdb = "^4.0.11"
gitpython = "^3.1.43"
h11 = "^0.14.0"
html5lib = "^1.1"
httpcore = "^1.0.6"
httptools = "^0.6.4"
httpx = "^0.27.2"
idna = "^3.10"
jinja2 = "^3.1.4"
jsonschema = "^4.23.0"
jsonschema-specifications = "^2024.10.1"
lxml = "^5.3.0"
markdown-it-py = "^3.0.0"
markupsafe = "^3.0.2"
mdurl = "^0.1.2"
narwhals = "^1.13.2"
numpy = "^2.1.3"
oauthlib = "^3.2.2"
pandas = "^2.2.3"
pefile = "^2024.8.26"
pillow = "^11.0.0"
pip-chill = "^1.0.3"
protobuf = "^5.28.3"
pyarrow = "^18.0.0"
pydantic = "^2.9.2"
pydantic-core = "^2.26.0"
pydeck = "^0.9.1"
pygments = "^2.18.0"
pyinstaller-hooks-contrib = "^2024.9"
pypng = "^0.20220715.0"
python-dateutil = "^2.9.0.post0"
python-dotenv = "^1.0.1"
python-slugify = "^8.0.4"
pytz = "^2024.2"
pywin32 = "^308"
pywin32-ctypes = "^0.2.3"
pyyaml = "^6.0.2"
referencing = "^0.35.1"
repath = "^0.9.0"
requests = "^2.32.3"
rich = "^13.9.4"
rpds-py = "^0.21.0"
setuptools = "^75.3.0"
six = "^1.16.0"
smmap = "^5.0.1"
sniffio = "^1.3.1"
soupsieve = "^2.6"
starlette = "^0.41.2"
streamlit = "^1.40.0"
tenacity = "^9.0.0"
text-unidecode = "^1.3"
tk = "^0.1.0"
toml = "^0.10.2"
tornado = "^6.4.1"
types-python-dateutil = "^2.9.0.20241003"
typing-extensions = "^4.12.2"
tzdata = "^2024.2"
urllib3 = "^2.2.3"
uvicorn = "^0.32.0"
watchfiles = "^0.24.0"
webencodings = "^0.5.1"
websockets = "^13.1"
winshell = "^0.6"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.10.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
