[tool.poetry]
name = "protheuscontrolcenter"
version = "0.1.0"
description = "Uma ferramenta web para gerenciar a instalação e inicialização de componentes do Protheus."
authors = ["GustavoDuranBR <gustavoduran22@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
streamlit = "^1.0.0"
requests = "^2.0"  # Exemplo: Inclua aqui outras dependências necessárias
uvloop = { version = "^0.21.0", optional = true, markers = "sys_platform != 'win32'" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.10.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
